samples/_failures_safe/1761558166_d90c16_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9a50c06e.c: In function ‘main’:
./samples/SAFE/__tmp_9a50c06e.c:155:5: error: expected expression at end of input
  155 |     int e =
      |     ^~~
./samples/SAFE/__tmp_9a50c06e.c:155:5: error: expected declaration or statement at end of input
